syntax = "proto3";

option go_package = "./protos";
package protos;

service Echo {
    rpc SayHello (EchoRequest) returns (EchoReply) {
    }
}

message EchoRequest {
    string message = 1;
}

message EchoReply {
    string message = 1;
}
